--- a/package.json
+++ b/package.json
@@ -34,5 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
 }
