--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Madhu619.github.io/publicis-sapient",
+  "homepage": "./",
   "name": "publicis-sapient",
   "version": "0.1.0",
   "private": true,
